--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.5.1",
+    "dayjs": "^1.11.10",
     "expo": "~49.0.13",
     "expo-blur": "^12.6.0",
     "expo-router": "^2.0.8",
@@ -17,7 +18,8 @@
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.5",
-    "react-native-elements": "^3.4.3"
+    "react-native-elements": "^3.4.3",
+    "react-native-ui-datepicker": "^1.0.8"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
