--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "18.2.0",
     "react-native": "0.72.5",
     "react-native-elements": "^3.4.3",
+    "react-native-gesture-handler": "^2.13.4",
     "react-native-ui-datepicker": "^1.0.8"
   },
   "devDependencies": {
