--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@gorhom/bottom-sheet": "^4.5.1",
+    "@react-native-community/datetimepicker": "^7.6.2",
     "axios": "^1.5.1",
     "dayjs": "^1.11.10",
     "expo": "~49.0.13",
@@ -20,6 +22,7 @@
     "react-native": "0.72.5",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "^2.13.4",
+    "react-native-reanimated": "^3.3.0",
     "react-native-ui-datepicker": "^1.0.8"
   },
   "devDependencies": {
