--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "expo-router": "^2.0.8",
     "expo-secure-store": "~12.3.1",
     "expo-status-bar": "~1.6.0",
+    "npm": "^10.3.0",
     "react": "18.2.0",
     "react-native": "0.72.5",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "^2.13.4",
     "react-native-reanimated": "^3.3.0",
-    "react-native-ui-datepicker": "^1.0.8"
+    "react-native-ui-datepicker": "^1.0.8",
+    "start": "^5.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
